tests/codegen/fail/union/enum_external_resolver_fn_conflicts_with_variant_external_resolver_fn.stderr
error: GraphQL union variant `Human` already has external resolver function `resolve_fn1` declared on the enum
       · note: https://spec.graphql.org/October2021#sec-Unions

 --> fail/union/enum_external_resolver_fn_conflicts_with_variant_external_resolver_fn.rs:6:15
  |
6 |     #[graphql(with = resolve_fn2)]
  |               ^^^^
